--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ version = "0.1.0"
 authors = ["Codecrafters <hello@codecrafters.io>"]
 edition = "2021"
 
+[lib]
+name = "redis"
+
 # DON'T EDIT THIS!
 #
 # Codecrafters relies on this file being intact to run tests successfully. Any changes
