added more info impelmentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "codecrafters",
         "memchr",
-        "replicaof"
+        "replicaof",
+        "replid"
     ]
 }
