established replconf exchange

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "cSpell.words": [
         "codecrafters",
         "memchr",
+        "ncapa",
+        "npsync",
+        "REPLCONF",
         "replicaof",
         "replid"
     ]
