added psync support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "memchr",
         "ncapa",
         "npsync",
+        "PSYNC",
         "REPLCONF",
         "replicaof",
         "replid"
