added support for rdb

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "PSYNC",
         "REPLCONF",
         "replicaof",
-        "replid"
+        "replid",
+        "Rpcy",
+        "VESV"
     ]
 }
